Fix css whitespace and comments

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,18 +12,18 @@
 
 @import 'basscss-addons/modules/btn-sizes';
 
+/* Would like to use this, but .input interferes with existing forms */
+/* @import 'basscss-addons/modules/forms'; */
+
 /* Basscss Core */
 
 @import 'basscss';
 
-/* Optional Modules (not included in Basscss by default) that must be able to be override basscss core */
+/* Optional Modules (extensions to Basscss Core) */
 
 @import 'basscss-addons/modules/responsive-margin';
 
 @import 'basscss-addons/modules/responsive-padding';
-
-/* Would like to use this, but .input interferes with existing forms */
-/* @import 'basscss-addons/modules/forms'; */
 
 @import 'basscss-addons/modules/colors';
 
@@ -54,7 +54,6 @@
 
 /* From basscss v7 */
 
-/* implemented with flex in v8? */
 /* @import 'basscss-ui-utility-groups'; */
 
 /* Custom type-scale */
@@ -79,7 +78,7 @@ html { line-height: 1.2; }
 .serif       { font-family: var(--serif); }
 .sans-serif  { font-family: var(--sans-serif); }
 .medium      { font-weight: 500; }
-.light { font-weight: 300; }
+.light       { font-weight: 300; }
 
 .titleize { text-transform: capitalize; }
 .shout { text-transform: uppercase; }
@@ -131,26 +130,14 @@ html { line-height: 1.2; }
 .container { max-width: 640px; }
 
 .home-container { width: 320px; }
-@media (--breakpoint-md) {
-    .home-container { width: 427px; }
-}
-@media (--breakpoint-lg) {
-    .home-container { width: 768px; }
-}
-@media (--breakpoint-xl) {
-    .home-container { width: 100%; }
-}
+@media (--breakpoint-md) { .home-container { width: 427px; } }
+@media (--breakpoint-lg) { .home-container { width: 768px; } }
+@media (--breakpoint-xl) { .home-container { width: 100%; } }
 
 .banner-container { height: 216px; }
-@media (--breakpoint-md) {
-    .banner-container { height: 288px; }
-}
-@media (--breakpoint-lg) {
-    .banner-container { height: 326px; }
-}
-@media (--breakpoint-xl) {
-    .banner-container { height: 432px; }
-}
+@media (--breakpoint-md) { .banner-container { height: 288px; } }
+@media (--breakpoint-lg) { .banner-container { height: 326px; } }
+@media (--breakpoint-xl) { .banner-container { height: 432px; } }
 
 /* Custom align */
 
@@ -403,7 +390,6 @@ html { line-height: 1.2; }
 .light-black  { color: var(--light-black); }
 .dark-black   { color: var(--dark-black); }
 
-
 /* Custom background-sizes */
 
 .bg-full { background-size: 100%; }
@@ -455,6 +441,10 @@ html { line-height: 1.2; }
 .stroke-teal         { stroke: var(--teal); }
 .stroke-green        { stroke: var(--green); }
 .stroke-navy         { stroke: var(--navy); }
+
+.fill-teal  { fill: var(--teal); }
+.fill-green { fill: var(--green); }
+.fill-navy  { fill: var(--navy); }
 
 .stroke-pure-white   { stroke: var(--pure-white); }
 .stroke-white        { stroke: var(--white); }
@@ -536,10 +526,6 @@ html { line-height: 1.2; }
 .img-featured { background-image: url('/images/desktop_assets/home_new-product-peruvian-clickable.jpg'); }
 .img-md-home-banner { background-image: url('/images/home_image_clickable.jpg'); }
 .img-lg-home-banner { background-image: url('/images/desktop_assets/desktop_home_image_clickable.jpg'); }
-
-.fill-teal { fill: var(--teal); }
-.fill-navy { fill: var(--navy); }
-.fill-black { fill: var(--black); }
 
 /* Custom interaction */
 
